test/expected/explain_cepctor_i.out
explain explicit C(int) const
                 ^
18: error: function can not be "explicit"
